a bit of cleanup